[package]
name = "wasm_pong"
version = "0.1.0"
authors = ["henkv"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
nalgebra = "0.16"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "Node",

    "HtmlElement",
    "HtmlHeadElement",
    "HtmlCanvasElement",

    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlShader",
    "WebGlUniformLocation",
]